--- a/demos/static2.html
+++ b/demos/static2.html
@@ -10,10 +10,9 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <ul>
-      <li><a href="/static1.html">Static Nodes - Edges 1</a></li>
-      <li><a href="/static2.html">Static Nodes - Edges 2</a></li>
-    </ul>
+    <h1><a href="/">Home</a> / Static Nodes - Edges 2</h1> 
+    <div id="index"></div>
+    <script src="./Static2.re"></script>
   </body>
 </html>
 
