--- a/demos/edge-animate.html
+++ b/demos/edge-animate.html
@@ -10,11 +10,9 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <ul>
-      <li><a href="/static1.html">Static Nodes - Edges 1</a></li>
-      <li><a href="/static2.html">Static Nodes - Edges 2</a></li>
-      <li><a href="/edge-animate.html">Edge Animation</a></li>
-    </ul>
+    <h1><a href="/">Home</a> / Static Nodes - Edges</h1> 
+    <div id="index"></div>
+    <script src="./EdgeAnimate.re"></script>
   </body>
 </html>
 
