--- a/demos/edge-animate.html
+++ b/demos/edge-animate.html
@@ -10,7 +10,7 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <h1><a href="/">Home</a> / Static Nodes - Edges</h1> 
+    <h1><a href="/">Home</a> / Animate Edges</h1> 
     <div id="index"></div>
     <script src="./EdgeAnimate.re"></script>
   </body>
