--- a/demos/node-animate.html
+++ b/demos/node-animate.html
@@ -10,12 +10,9 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <ul>
-      <li><a href="/static1.html">Static Nodes - Edges 1</a></li>
-      <li><a href="/static2.html">Static Nodes - Edges 2</a></li>
-      <li><a href="/edge-animate.html">Edge Animation</a></li>
-      <li><a href="/node-animate.html">Node Animation</a></li>
-    </ul>
+    <h1><a href="/">Home</a> / Animate Nodes</h1>
+    <div id="index"></div>
+    <script src="./NodeAnimate.re"></script>
   </body>
 </html>
 
