--- a/demos/behaviors.html
+++ b/demos/behaviors.html
@@ -10,13 +10,9 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <ul>
-      <li><a href="/static1.html">Static Nodes - Edges 1</a></li>
-      <li><a href="/static2.html">Static Nodes - Edges 2</a></li>
-      <li><a href="/edge-animate.html">Edge Animation</a></li>
-      <li><a href="/node-animate.html">Node Animation</a></li>
-      <li><a href="/behaviors.html">Behaviors</a></li>
-    </ul>
+    <h1><a href="/">Home</a> / Behaviors</h1> 
+    <div id="index"></div>
+    <script src="./Behaviors.re"></script>
   </body>
 </html>
 
